--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,13 @@
     <string name="please_select_mode">請選擇模式</string>
     <string name="turn">往右輪</string>
     <string name="calendar">日曆</string>
+    <string name="date">日期</string>
+    <string name="time">時間</string>
+    <string name="note">備註</string>
+    <string name="pratice">練習</string>
+    <string name="race">比賽</string>
+    <string name="other">其他</string>
+    <string name="complete">請選擇一個按鈕</string>
     <string-array name="location">
         <item>自由</item>
         <item>大砲</item>
